--- a/client/public/index.html
+++ b/client/public/index.html
@@ -33,7 +33,7 @@
       href="https://fonts.googleapis.com/css2?family=Nunito:wght@400&display=swap"
       rel="stylesheet"
     />
-    <title>React App</title>
+    <title>MERNG E-commerce app</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
